# StartASM

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  StartASM  StressTestGenerator.py
ANTLR/: lexer.txt  parser.txt
code/: 18Code.sasm  18Code.txt  ExampleCode.txt  JunkCode.sasm  JunkCode.txt  LongCode.txt  LongExampleCode.txt  LongWrongCode.txt  MathCalculator.sasm  PointerCode.sasm  SimpleCode.txt  SmallCode.sasm  SmallCode.txt  WrongCode.sasm  WrongCode.txt
documentation/: Examples.md  Introduction.md  Progress.md
examples/: ExampleCode.sasm  MathCalculator.sasm  PointerCode.sasm  SimpleCode.sasm
include/ast/: ASTBuilder.h  AbstractSyntaxTree.h  Instructions.h  Operands.h  Visitor.h
include/codegen/: CodeGenerator.h  Visitor.h
include/compiler/: Compiler.h
include/lexer/: Lexer.h
include/main/: Compiler.h
include/parser/: Parser.h
include/pt/: ParseTree.h
include/scopecheck/: ScopeChecker.h
include/semantics/: SemanticAnalyzer.h
include/symbolres/: SymbolResolver.h
src/: .Secrets.cpp  ASTBuilder.cpp  AbstractSyntaxTree.cpp  CodeGenerator.cpp  Compiler.cpp  InstructionSet.cpp  Lexer.cpp  ParseTree.cpp  Parser.cpp  ScopeChecker.cpp  SemanticAnalyzer.cpp  StartASM.cpp  SymbolResolver.cpp
src/ast/: ASTBuilder.cpp  AbstractSyntaxTree.cpp
src/codegen/: CodeGenerator.cpp
src/compiler/: Compiler.cpp  StartASM.cpp
src/include/: .Secrets.h  ASTBuilder.h  AbstractSyntaxTree.h  CodeGenerator.h  Compiler.h  InstructionSet.h  Instructions.h  Lexer.h  Operands.h  ParseTree.h  Parser.h  Registers.h  ScopeChecker.h  SemanticAnalyzer.h  SymbolResolver.h  Tokens.h
src/lexer/: Lexer.cpp
src/main/: Compiler.cpp  StartASM.cpp
src/misc/: .Secrets.cpp
src/parser/: Parser.cpp
src/pt/: ParseTree.cpp
src/scopecheck/: ScopeChecker.cpp
src/semantics/: SemanticAnalyzer.cpp
src/symbolres/: SymbolResolver.cpp
testing/: ASTTest.py  Benchmark.py
testscripts/: StressTest.py  StressTestGenerator.py
